--- a/unicorn.css
+++ b/unicorn.css
@@ -44,11 +44,8 @@ footer p {
         padding: 10px;
 }
 .wrapper{
-    float: left;
-
     padding: 10px;
     background-color: lightseagreen;
-    display: inline-block;
 }
 li {
     color: aqua;
